- Makefile: fixed typo for desktop obj files (LVL)
- added some const keywords here and there (LVL)

10. Apr. 2002
- Added additional application stack in aes/gemshlib.c so that it is now
  possible to start another application at least. However, it will still
  crash when it finishs. (THH)
- Some minor bug fixes in aes and desk. (THH)
- Disabled the autoexec stuff in bios/startup.S, I think creating a new
  baspage for that is not really necessary (THH).

11. Apr. 2002
- Finally found the other bug that caused EmuTOS to crash when running a
  GEM application (dos_exec() was not reentrant). (THH)
- Now linking desk_rsc.c into EmuTOS, too. (THH).

13. Apr. 2002
- doc/vdibind.txt - added documentation for vdi routine implementation (MAD)
- doc/vdimouse.S - put all mouse related stuff here in (MAD)

14. Apr. 2002
- bios/lineavars.S - corrected length and memory position of vars (MAD)

15. Apr. 2002
- finally commited in Czech keyboard (LVL)

16. Apr. 2002
- bios/mousedrv.S - moved to vdi/mouse.drv, because it is not BIOS (MAD)
- vdi/mousedrv.S - did put all non-graphical functions here (MAD)
- vdi/vdimouse.S - did put all graphical functions here (MAD)

16. Apr. 2002
- vdi/mousedrv.S - moved some more routines in there (MAD)

18. Apr. 2002
- vdi/opnwkram - added right screen coordinates to wk info (MAD)

20. Apr. 2002
- vdi/vdimouse.S - used concat routine for screen offset calculation (MAD)
- vdi/vdimouse.S - got mouse working for big screens (MAD)
- vdi/* - got all other routines working for big screens too (MAD)
- vdi/* - remove also many vme10 #ifdefs too (MAD)

20. Apr. 2002
- desk/* - removed/fixed all compiler warnings (MAD)
- vdi/opnwkram - plane number and fonts corr. initialized (MAD)

23. Apr. 2002
- Makefile - fal_$(DESASS) removed on make clean (LVL)
- Fixed text and mouse drawing in VDI color mode (THH).
- Improved the desktop's about dialog (THH).
- bios/startup.S - VBL video mode change written (disabled) (MAD)