@@ -784,3 +784,6 @@ Start... early ages
 - Fixed text and mouse drawing in VDI color mode (THH).
 - Improved the desktop's about dialog (THH).
 - bios/startup.S - VBL video mode change written (disabled) (MAD)
+
+24. Apr. 2002
+- vdi/* - switched some jmptbl functions to lowercase (MAD)
